scss/_items.scss
/**
 * Items
 * --------------------------------------------------
 */

.item {
  @include item-style($item-default-bg, $item-default-border, $item-default-text);
  @include transition(margin-left 0.2s ease-in-out, margin-right 0.2s ease-in-out, left 0.2s ease-in-out);

  position: relative;
  z-index: $z-index-item; // Make sure the borders and stuff don't get hidden by children
  display: block;

  margin: $item-border-width * -1;
  padding: $item-padding;

  border-width: $item-border-width;
  border-style: solid;
  font-size: $item-font-size;

  h2 {
    margin: 0 0 4px 0;
    font-size: 16px;
  }
  h3 {
    margin: 0 0 4px 0;
    font-size: 14px;
  }
  h4 {
    margin: 0 0 4px 0;
    font-size: 12px;
  }
  h5, h6 {
    margin: 0 0 3px 0;
    font-size: 10px;
  }
  p {
    color: #666;
    font-size: 14px;
  }

  h1:last-child,
  h2:last-child,
  h3:last-child,
  h4:last-child,
  h5:last-child,
  h6:last-child,
  p:last-child {
    margin-bottom: 0;
  }

  // Align badges within items
  .badge {
    float: right;
  }
  .badge + .badge {
    margin-right: 5px;
  }

  // Different themes for items
  &.item-light {
    @include item-style($item-light-bg, $item-light-border, $item-light-text);
  }
  &.item-stable {
    @include item-style($item-stable-bg, $item-stable-border, $item-stable-text);
  }
  &.item-positive {
    @include item-style($item-positive-bg, $item-positive-border, $item-positive-text);
  }
  &.item-calm {
    @include item-style($item-calm-bg, $item-calm-border, $item-calm-text);
  }
  &.item-assertive {
    @include item-style($item-assertive-bg, $item-assertive-border, $item-assertive-text);
  }
  &.item-balanced {
    @include item-style($item-balanced-bg, $item-balanced-border, $item-balanced-text);
  }
  &.item-energized {
    @include item-style($item-energized-bg, $item-energized-border, $item-energized-text);
  }
  &.item-royal {
    @include item-style($item-royal-bg, $item-royal-border, $item-royal-text);
  }
  &.item-dark {
    @include item-style($item-dark-bg, $item-dark-border, $item-dark-text);
  }

}

// Link and Button Active States
.item.active,
.ionic-pseudo .item:active,
.item-complex.active .item-content {
  @include item-active-style($item-default-active-bg, $item-default-active-border);

  // Different active themes for <a> and <button> items
  &.item-light {
    @include item-active-style($item-light-active-bg, $item-light-active-border);
  }
  &.item-stable {
    @include item-active-style($item-stable-active-bg, $item-stable-active-border);
  }
  &.item-positive {
    @include item-active-style($item-positive-active-bg, $item-positive-active-border);
  }
  &.item-calm {
    @include item-active-style($item-calm-active-bg, $item-calm-active-border);
  }
  &.item-assertive {
    @include item-active-style($item-assertive-active-bg, $item-assertive-active-border);
  }
  &.item-balanced {
    @include item-active-style($item-balanced-active-bg, $item-balanced-active-border);
  }
  &.item-energized {
    @include item-active-style($item-energized-active-bg, $item-energized-active-border);
  }
  &.item-royal {
    @include item-active-style($item-royal-active-bg, $item-royal-active-border);
  }
  &.item-dark {
    @include item-active-style($item-dark-active-bg, $item-dark-active-border);
  }
}

// Handle text overflow
.item,
.item h1,
.item h2,
.item h3,
.item h4,
.item h5,
.item h6,
.item p,
.item-content,
.item-content h1,
.item-content h2,
.item-content h3,
.item-content h4,
.item-content h5,
.item-content h6,
.item-content p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

// Linked list items
a.item {
  color: inherit;
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}


/**
 * Complex Items
 * --------------------------------------------------
 * Adding .item-complex allows the .item to be slidable and
 * have options underneath the button, but also requires an
 * additional .item-content element inside .item.
 * Basically .item-complex removes any default settings which
 * .item added, so that .item-content looks them as just .item.
 */

.item-complex,
a.item.item-complex,
button.item.item-complex {
  padding: 0;
}
.item-complex .item-content,
.item-radio .item-content {
  /**
   * The content area of a complex list item. This area can
   * Slide left and right and be dragged to support different
   * UI interactions.
   */
  @include transition(all 0.1s ease-in-out);
  position: relative;
  z-index: $z-index-item;

  padding: $item-padding (($item-padding * 3) - 5) $item-padding $item-padding;
  border: none;

  background-color: white;
}

a.item-content {
  display: block;
  color: inherit;
  text-decoration: none;
}

.item-text-wrap .item,
.item-text-wrap,
.item-text-wrap h1,
.item-text-wrap h2,
.item-text-wrap h3,
.item-text-wrap h4,
.item-text-wrap h5,
.item-text-wrap h6,
.item-text-wrap p,
.item-complex.item-text-wrap .item-content,
.item-body h1,
.item-body h2,
.item-body h3,
.item-body h4,
.item-body h5,
.item-body h6,
.item-body p {
  overflow: hidden;
  white-space: normal;
}
.item-complex.item-text-wrap,
.item-complex.item-text-wrap h1,
.item-complex.item-text-wrap h2,
.item-complex.item-text-wrap h3,
.item-complex.item-text-wrap h4,
.item-complex.item-text-wrap h5,
.item-complex.item-text-wrap h6,
.item-complex.item-text-wrap p {
  overflow: hidden;
  white-space: nowrap;
}


/**
 * Item Icons
 * --------------------------------------------------
 */

.item-icon-left .icon,
.item-icon-right .icon {
  @include display-flex();
  @include align-items(center);
  position: absolute;
  top: 0;
  height: 100%;
  font-size: $item-icon-font-size;

  &:before {
    display: block;
    width: $item-icon-font-size;
    text-align: center;
  }
}

.item .fill-icon {
  min-width: $item-icon-fill-font-size + 2;
  min-height: $item-icon-fill-font-size + 2;
  font-size: $item-icon-fill-font-size;
}
/* ... */

